# ttslib

./: .gitignore  README.md  pyproject.toml
dev/: create_map.py  get_alias.py  get_data.py  get_supported.py  read_ttsx.py  ubuntu.py
tests/: test_macos.py  test_resource.py
ttslib/: __init__.py  alias.yaml  core.py  espeak.yaml  guess.py  local.py  osx.py  osx.yaml  ttsx.py  util.py  windows.yaml
ttslib/data/: __init__.py  espeak.yaml  guess.yaml  speaker.yaml  supported.yaml  to_speaker.yaml  windows.yaml
